--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL=mongodb://localhost/mybrary
+DATABASE_URL=mongodb+srv://George_mongo:<z6y3MeTsZOBnaXOU>@cluster0.u8j788n.mongodb.net/mybrary?retryWrites=true&w=majority&appName=Cluster0
