--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
     "method-override": "^3.0.0",
-    "mongoose": "^8.18.2"
+    "mongoose": "^8.18.2",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "dotenv": "^17.2.2",
